# smit

./: .gitignore  Cargo.toml  build_release.sh  schema.sql
frontend/: index.html  package-lock.json  package.json  webpack.config.js
frontend/src/: App.svelte  ajax.js  global.css  index.js  utils.js
frontend/src/pages/: _fallback.svelte  _layout.svelte  index.svelte  new.svelte  not-index.svelte  signin.svelte  signup.svelte
frontend/src/pages/_components/: FormHost.svelte  FormRow.svelte  FormRowBase.svelte  TextAreaFormRow.svelte
frontend/src/pages/issue/: [issueid].svelte
src/: config.rs  main.rs  response_error.rs  text_check.rs
src/accounts/: controller.rs
src/accounts/api/: cryptography.rs  db.rs  mod.rs
src/api/: issues.rs
src/controllers/: issues.rs
src/db/: issues.rs
