[package]
name = "smit"
version = "0.1.0"
authors = ["john01dav <john01dav@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-web-static-files = { git = "https://github.com/john01dav/actix-web-static-files.git" }
serde = "1.0.123"
serde_yaml = "0.8.16"
anyhow = "1.0.38"

[profile.release]
lto = true