[package]
name = "smit"
version = "0.1.0"
authors = ["john01dav <john01dav@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-web-static-files = { git = "https://github.com/john01dav/actix-web-static-files.git" }
serde = "1.0.123"
serde_yaml = "0.8.16"
anyhow = "1.0.38"
sqlx = {version = "0.4.1", features = ["runtime-actix-rustls", "mysql", "macros"]}
rust-argon2 = "0.8.3"
rand = "0.8.3"
regex = "1.4.3"
once_cell = "1.5.2"
unic-ucd-category = "0.9.0"
actix-session = "0.4.0"
base64 = "0.13.0"
uuid = {version = "0.8.2", features = ["v4", "serde"]}

[profile.release]
lto = true